--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -37,3 +37,12 @@ html[data-theme='dark'] {
 html[data-theme='dark'] .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.3);
 }
+
+
+.footer__title {
+  margin-bottom: 16px;
+}
+
+.footer__links{
+  margin-bottom: 60px;
+}
