--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,9 +1,11 @@
+@import "normalize.css";
+@import "./font";
+
 /**
  * Any CSS included here will be global. The classic template
  * bundles Infima by default. Infima is a CSS framework designed to
  * work well for content-centric websites.
  */
-
 /* You can override the default Infima variables here. */
 :root {
   --ifm-color-primary: #1273ea;
@@ -14,6 +16,8 @@
   --ifm-color-primary-lighter: #68b8f8;
   --ifm-color-primary-lightest: #c4e3fb;
   --ifm-code-font-size: 95%;
+  --ifm-text-color: #1d273d;
+  --ifm-subtext-color: #57627b;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -25,6 +29,12 @@ html[data-theme="dark"] {
   --ifm-color-primary-light: #1c94f4;
   --ifm-color-primary-lighter: #68b8f8;
   --ifm-color-primary-lightest: #c4e3fb;
+  --ifm-text-color: #f0f4fa;
+  --ifm-subtext-color: #aeb5c3;
+}
+
+body {
+  font-family: "Noto Sans", sans-serif;
 }
 
 .docusaurus-highlight-code-line {
