--- a/src/components/homepage-features/card.module.scss
+++ b/src/components/homepage-features/card.module.scss
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: start;
+  align-items: flex-start;
   border: 1px solid #dee6f1;
   border-radius: 8px;
   padding: 28px;
