--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -18,6 +18,7 @@
   --ifm-code-font-size: 95%;
   --ifm-text-color: #1d273d;
   --ifm-subtext-color: #57627b;
+  --ifm-footer-background-color: #f5f8fc;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -31,10 +32,30 @@ html[data-theme="dark"] {
   --ifm-color-primary-lightest: #c4e3fb;
   --ifm-text-color: #f0f4fa;
   --ifm-subtext-color: #aeb5c3;
+  --ifm-background-surface-color: #141820;
+  --ifm-footer-background-color: #222630;
+
+  background-color: var(--ifm-background-surface-color);
+
+  nav.navbar {
+    box-shadow: 0 0 1px 1px #3d4354;
+  }
+
+  .docusaurus-highlight-code-line {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+
+  .toggleTrackThumb_node_modules-\@docusaurus-theme-classic-lib-next-theme-Toggle-styles-module {
+    background-color: var(--ifm-background-surface-color);
+  }
 }
 
 body {
   font-family: "Noto Sans", sans-serif;
+}
+
+.toggleTrackThumb_node_modules-\@docusaurus-theme-classic-lib-next-theme-Toggle-styles-module {
+  box-shadow: none !important;
 }
 
 .docusaurus-highlight-code-line {
@@ -42,10 +63,6 @@ body {
   display: block;
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
-}
-
-html[data-theme="dark"] .docusaurus-highlight-code-line {
-  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .footer__title {
