--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -1,9 +1,11 @@
+@import "normalize.css";
+@import "./font";
+
 /**
  * Any CSS included here will be global. The classic template
  * bundles Infima by default. Infima is a CSS framework designed to
  * work well for content-centric websites.
  */
-
 /* You can override the default Infima variables here. */
 :root {
   --ifm-color-primary: #1273ea;
@@ -14,6 +16,9 @@
   --ifm-color-primary-lighter: #68b8f8;
   --ifm-color-primary-lightest: #c4e3fb;
   --ifm-code-font-size: 95%;
+  --ifm-text-color: #1d273d;
+  --ifm-subtext-color: #57627b;
+  --ifm-footer-background-color: #f5f8fc;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -25,6 +30,32 @@ html[data-theme="dark"] {
   --ifm-color-primary-light: #1c94f4;
   --ifm-color-primary-lighter: #68b8f8;
   --ifm-color-primary-lightest: #c4e3fb;
+  --ifm-text-color: #f0f4fa;
+  --ifm-subtext-color: #aeb5c3;
+  --ifm-background-surface-color: #141820;
+  --ifm-footer-background-color: #222630;
+
+  background-color: var(--ifm-background-surface-color);
+
+  nav.navbar {
+    box-shadow: 0 0 1px 1px #3d4354;
+  }
+
+  .docusaurus-highlight-code-line {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+
+  .toggleTrackThumb_node_modules-\@docusaurus-theme-classic-lib-next-theme-Toggle-styles-module {
+    background-color: var(--ifm-background-surface-color);
+  }
+}
+
+body {
+  font-family: "Noto Sans", sans-serif;
+}
+
+.toggleTrackThumb_node_modules-\@docusaurus-theme-classic-lib-next-theme-Toggle-styles-module {
+  box-shadow: none !important;
 }
 
 .docusaurus-highlight-code-line {
@@ -32,10 +63,6 @@ html[data-theme="dark"] {
   display: block;
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
-}
-
-html[data-theme="dark"] .docusaurus-highlight-code-line {
-  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .footer__title {
