refactor: adjust nav item spacing

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -19,6 +19,8 @@
   --ifm-text-color: #1d273d;
   --ifm-subtext-color: #57627b;
   --ifm-footer-background-color: #f5f8fc;
+
+  --ifm-navbar-item-padding-horizontal: 1rem;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
