feat: add space between icon and text

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -71,6 +71,7 @@ html[data-theme='dark'] .background {
   display: inline-flex;
   align-items: center;
   margin-left: 8px;
+  gap: 6px;
 }
 
 .pin {
