--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -24,6 +24,7 @@
   --ifm-navbar-padding-horizontal: 32px;
   --ifm-navbar-shadow: 0 1px 16px 0 rgba(0, 0, 0, 0.05);
   --ifm-heading-font-weight: 600;
+  --docusaurus-announcement-bar-height: auto!important;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
