fix: address part of feedback from Richard and Bailey

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -80,6 +80,10 @@ body {
   margin-bottom: 60px;
 }
 
+.hidden {
+  display: none !important;
+  }
+
 .theme-doc-markdown {
   p {
     line-height: 1.75rem;
