update links to dapps, change card height on home page, more

--- a/src/components/homepage-features/card.module.scss
+++ b/src/components/homepage-features/card.module.scss
@@ -21,6 +21,7 @@
   padding: 28px;
   background: #ffffff;
   transition: 0.1s;
+  height: 100%;
 
   &:hover {
     box-shadow: 0px 4px 16px #dee6f1;
